avl_backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avl-backend
  namespace: avl-namespace
  labels:
    app: avl-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avl-backend
  template:
    metadata:
      labels:
        app: avl-backend
    spec:
      containers:
      - name: avl-backend
        image: ezmamig/avl_backend:latest
        ports:
        - containerPort: 5000
