avl_client_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avl-client
  labels:
    app: avl-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avl-client
  template:
    metadata:
      labels:
        app: avl-client
    spec:
      containers:
      - name: avl-client
        image: ezmamig/avl_client:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: config-volume
          mountPath: /app/configs/
      volumes:
      - name: config-volume
        configMap:
          name: client-service-config
