avl_backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avl-backend-service
spec:
  selector:
    app: avl-backend
  ports:
    - protocol: TCP
      port: 5020
      targetPort: 5000
  type: LoadBalancer
