avl_client_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avl-client-service
  namespace: avl-namespace
spec:
  selector:
    app: avl-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
