avl_client_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetess.io/rewrite-target: /
  name: avl-ingress
  namespace: avl-namespace
spec:
  rules:
  - host: avl.tehnici.zadatak
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avl-client-service
            port:
              number: 80
